[gd_scene load_steps=21 format=2]

[ext_resource path="res://Rooms/Tutorial/Pages/Tutorial2.png" type="Texture" id=1]
[ext_resource path="res://Rooms/Tutorial/Pages/Tutorial8.png" type="Texture" id=2]
[ext_resource path="res://Rooms/Tutorial/Pages/Tutorial5.png" type="Texture" id=3]
[ext_resource path="res://Rooms/Tutorial/Pages/Tutorial1.png" type="Texture" id=4]
[ext_resource path="res://Rooms/Tutorial/Pages/Tutorial7.png" type="Texture" id=5]
[ext_resource path="res://Rooms/Tutorial/Pages/Tutorial4.png" type="Texture" id=6]
[ext_resource path="res://Rooms/Tutorial/Pages/Tutorial6.png" type="Texture" id=7]
[ext_resource path="res://Rooms/Tutorial/Pages/Tutorial3.png" type="Texture" id=8]
[ext_resource path="res://Rooms/Tutorial/Buttons/Tutorial Arrow2.png" type="Texture" id=9]
[ext_resource path="res://Rooms/Tutorial/Buttons/Tutorial Arrow1.png" type="Texture" id=10]
[ext_resource path="res://Rooms/Tutorial/TutorialButtons.gd" type="Script" id=11]
[ext_resource path="res://Rooms/Tutorial/TutorialLetter.tscn" type="PackedScene" id=12]
[ext_resource path="res://Objects/Tiles/Sparks.png" type="Texture" id=13]
[ext_resource path="res://Objects/Player/Minigames/Piper/Puncture.tscn" type="PackedScene" id=14]
[ext_resource path="res://Rooms/Tutorial/Buttons/Tutorial X1.png" type="Texture" id=15]
[ext_resource path="res://Rooms/Tutorial/Buttons/Tutorial X2.png" type="Texture" id=16]
[ext_resource path="res://Objects/Player/Minigames/Piper/TapeRoll.png" type="Texture" id=17]
[ext_resource path="res://Rooms/Tutorial/FreeCursor.gd" type="Script" id=18]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.581006, 0.899441, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 0.592285, 0.592285, 0.592285, 1, 1, 1, 1, 0 )

[node name="Tutorial" type="Node2D"]

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 160, 120 )
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[node name="Pages" type="Node2D" parent="ViewportContainer/Viewport"]

[node name="Tutorial1" type="Sprite" parent="ViewportContainer/Viewport/Pages"]
position = Vector2( 80, 60 )
texture = ExtResource( 4 )

[node name="Tutorial2" type="Sprite" parent="ViewportContainer/Viewport/Pages"]
position = Vector2( 240, 60 )
texture = ExtResource( 1 )

[node name="Tutorial3" type="Sprite" parent="ViewportContainer/Viewport/Pages"]
position = Vector2( 400, 60 )
texture = ExtResource( 8 )

[node name="Tutorial4" type="Sprite" parent="ViewportContainer/Viewport/Pages"]
position = Vector2( 560, 60 )
texture = ExtResource( 6 )

[node name="Tutorial5" type="Sprite" parent="ViewportContainer/Viewport/Pages"]
position = Vector2( 720, 60 )
texture = ExtResource( 3 )

[node name="Tutorial6" type="Sprite" parent="ViewportContainer/Viewport/Pages"]
position = Vector2( 880, 60 )
texture = ExtResource( 7 )

[node name="Tutorial7" type="Sprite" parent="ViewportContainer/Viewport/Pages"]
position = Vector2( 1040, 60 )
texture = ExtResource( 5 )

[node name="Tutorial8" type="Sprite" parent="ViewportContainer/Viewport/Pages"]
position = Vector2( 1200, 60 )
texture = ExtResource( 2 )

[node name="Doodads" type="Node2D" parent="ViewportContainer/Viewport"]

[node name="Controls" type="Node2D" parent="ViewportContainer/Viewport/Doodads"]

[node name="P1" type="Node2D" parent="ViewportContainer/Viewport/Doodads/Controls"]

[node name="Letter" parent="ViewportContainer/Viewport/Doodads/Controls/P1" instance=ExtResource( 12 )]
position = Vector2( 183, 57 )
Text = "W"
Key = "Up1"

[node name="Letter2" parent="ViewportContainer/Viewport/Doodads/Controls/P1" instance=ExtResource( 12 )]
position = Vector2( 172, 73 )
Text = "A"
Key = "Left1"

[node name="Letter3" parent="ViewportContainer/Viewport/Doodads/Controls/P1" instance=ExtResource( 12 )]
position = Vector2( 188, 73 )
Text = "S"
Key = "Down1"

[node name="Letter4" parent="ViewportContainer/Viewport/Doodads/Controls/P1" instance=ExtResource( 12 )]
position = Vector2( 204, 73 )
Text = "D"
Key = "Right1"

[node name="Letter5" parent="ViewportContainer/Viewport/Doodads/Controls/P1" instance=ExtResource( 12 )]
position = Vector2( 226, 73 )
Text = "E"
Key = "Interact1"

[node name="P2" type="Node2D" parent="ViewportContainer/Viewport/Doodads/Controls"]

[node name="Letter" parent="ViewportContainer/Viewport/Doodads/Controls/P2" instance=ExtResource( 12 )]
position = Vector2( 265, 57 )
Text = "↑ "
Key = "Up2"

[node name="Letter2" parent="ViewportContainer/Viewport/Doodads/Controls/P2" instance=ExtResource( 12 )]
position = Vector2( 249, 73 )
Text = "← "
Key = "Left2"

[node name="Letter3" parent="ViewportContainer/Viewport/Doodads/Controls/P2" instance=ExtResource( 12 )]
position = Vector2( 265, 73 )
Text = "↓ "
Key = "Down2"

[node name="Letter4" parent="ViewportContainer/Viewport/Doodads/Controls/P2" instance=ExtResource( 12 )]
position = Vector2( 281, 73 )
Text = "→ "
Key = "Right2"

[node name="Letter5" parent="ViewportContainer/Viewport/Doodads/Controls/P2" instance=ExtResource( 12 )]
position = Vector2( 302, 79 )
Text = "ctrl"
Key = "Interact2"

[node name="CPUParticles2D" type="CPUParticles2D" parent="ViewportContainer/Viewport/Doodads"]
material = SubResource( 1 )
position = Vector2( 763, 66 )
amount = 20
lifetime = 1.5
speed_scale = 1.5
explosiveness = 0.66
randomness = 0.9
lifetime_randomness = 0.5
texture = ExtResource( 13 )
direction = Vector2( 0, -20 )
spread = 90.0
initial_velocity = 30.0
initial_velocity_random = 1.0
angular_velocity = 100.0
angular_velocity_random = 1.0
color = Color( 1, 1, 0, 1 )
color_ramp = SubResource( 2 )
hue_variation = 0.05
hue_variation_random = 0.49

[node name="CPUParticles2D2" type="CPUParticles2D" parent="ViewportContainer/Viewport/Doodads"]
material = SubResource( 1 )
position = Vector2( 762, 77 )
amount = 20
lifetime = 1.5
speed_scale = 1.5
explosiveness = 0.66
randomness = 0.9
lifetime_randomness = 0.5
texture = ExtResource( 13 )
direction = Vector2( 0, -20 )
spread = 90.0
initial_velocity = 30.0
initial_velocity_random = 1.0
angular_velocity = 100.0
angular_velocity_random = 1.0
color = Color( 1, 1, 0, 1 )
color_ramp = SubResource( 2 )
hue_variation = 0.05
hue_variation_random = 0.49

[node name="CPUParticles2D3" type="CPUParticles2D" parent="ViewportContainer/Viewport/Doodads"]
material = SubResource( 1 )
position = Vector2( 770, 82 )
amount = 20
lifetime = 1.5
speed_scale = 1.5
explosiveness = 0.66
randomness = 0.9
lifetime_randomness = 0.5
texture = ExtResource( 13 )
direction = Vector2( 0, -20 )
spread = 90.0
initial_velocity = 30.0
initial_velocity_random = 1.0
angular_velocity = 100.0
angular_velocity_random = 1.0
color = Color( 1, 1, 0, 1 )
color_ramp = SubResource( 2 )
hue_variation = 0.05
hue_variation_random = 0.49

[node name="Puncture" parent="ViewportContainer/Viewport/Doodads" instance=ExtResource( 14 )]
position = Vector2( 1073, 80 )

[node name="Puncture2" parent="ViewportContainer/Viewport/Doodads" instance=ExtResource( 14 )]
position = Vector2( 1100, 101 )

[node name="Cursor" type="KinematicBody2D" parent="ViewportContainer/Viewport/Doodads"]
position = Vector2( 1067, 75 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 18 )

[node name="Sprite" type="Sprite" parent="ViewportContainer/Viewport/Doodads/Cursor"]
position = Vector2( 7, -5 )
texture = ExtResource( 17 )

[node name="Camera2D" type="Camera2D" parent="ViewportContainer/Viewport"]
anchor_mode = 0
current = true
smoothing_enabled = true
smoothing_speed = 10.0
script = ExtResource( 11 )

[node name="Buttons" type="Node2D" parent="ViewportContainer/Viewport/Camera2D"]

[node name="NextButton" type="TextureButton" parent="ViewportContainer/Viewport/Camera2D/Buttons"]
margin_left = 52.0
margin_top = 112.0
margin_right = 64.0
margin_bottom = 119.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )

[node name="BackButton" type="TextureButton" parent="ViewportContainer/Viewport/Camera2D/Buttons"]
visible = false
margin_left = 35.0
margin_top = 112.0
margin_right = 47.0
margin_bottom = 119.0
disabled = true
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 10 )
texture_focused = ExtResource( 10 )
flip_h = true

[node name="XButton" type="TextureButton" parent="ViewportContainer/Viewport/Camera2D/Buttons"]
margin_left = 149.0
margin_right = 160.0
margin_bottom = 11.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 16 )
texture_disabled = ExtResource( 15 )
texture_focused = ExtResource( 15 )

[connection signal="pressed" from="ViewportContainer/Viewport/Camera2D/Buttons/NextButton" to="ViewportContainer/Viewport/Camera2D" method="_on_NextButton_pressed"]
[connection signal="pressed" from="ViewportContainer/Viewport/Camera2D/Buttons/BackButton" to="ViewportContainer/Viewport/Camera2D" method="_on_BackButton_pressed"]
[connection signal="pressed" from="ViewportContainer/Viewport/Camera2D/Buttons/XButton" to="ViewportContainer/Viewport/Camera2D" method="_on_XButton_pressed"]
